# honas

./: .gitignore  Doxyfile  LICENSE  README.md  lib_libeemo_honas_la-honas.lo  meson.build  meson_options.txt
doc/images/: honas_overview.dia
etc/: example_honas-gather.conf  example_honas-search.json  example_subnet_definitions.json  periodic_search_jobs.conf
fuzz/input/dns-relayd/testcases/: initial
fuzz/src/: input_fuzz.c
include/: advice.h  bitset.h  bloom.h  byte_slice.h  combinations.h  config.h  defines.h.in  delim_reader.h  honas_gather_config.h  honas_input.h  honas_state.h  hyperloglog.h  includes.h  inet.h  input_dns_relayd.h  input_dns_socket.h  instrumentation.h  json_printer.h  logging.h  read_file.h  subnet_activity.h  utils.h
scripts/: bf_dns_query.py  booter_falsepositive_check.py  booter_groundtruth_compare.py  crm_diff.py  entities_to_sector.py  experiment_to_csv.py  honas_actual_theoretical_fp.py  honas_daily_state_combine.py  honas_state_combine_rotate.py  honas_state_rotate.py  keys.py.example  mailfilter_falsepositive_check.py  mailfilter_groundtruth_compare.py  misp_numbers.py  ndn_download_blacklist.py  ndn_falsepositive_check.py  ndn_groundtruth_compare.py  ndn_misp_lookup.py  occurrence_finder_ndn.py  pareto_analysis.py  query_all_scenarios.py  query_booter_scenario.py  query_generic_blacklist.py  query_honas.py  query_honas_pcap.py  query_mailfilter_scenario.py  query_ndn_scenario.py  subnet_definitions_generator.py
src/: advice.c  bloom.c  byte_slice.c  combinations.c  config.c  delim_reader.c  honas_gather_config.c  honas_state.c  hyperloglog.c  inet.c  input_dns_relayd.c  input_dns_socket.c  instrumentation.c  json_printer.c  logging.c  read_file.c  subnet_activity.c  utils.c
src/dnstap.pb/: dnstap.pb-c.h
tests/: basic.c  bitset.c  bloom.c  byte_slice.c  combinations.c  hyperloglog.c  input_dns_relayd.c  input_dns_socket.c  main.c  state_aggregation.c  subnet_activity.c
